# climb-harder-project

./: .gitignore  Makefile  Makefile.dvc  README.md  app.py  dvc.yaml  pyproject.toml
.dvc/: config
data/interim/: .gitignore
data/models/performance_model/: .gitignore
data/processed/: .gitignore
data/raw/: reddit_data.csv.dvc
notebooks/: climbing.ipynb
src/: setup.py
src/api/: main.py
src/app/: app.py  db_utils.py
src/data/: load_data.py
src/scripts/data/: clean_data.py  make_datasets.py
src/scripts/models/: train_performance_model.py
src/tests/: test_data_cleaning.py
src/utils/: climbing_grades_mapping.py  utils.py
