[tool.poetry]
name = "climb-harder"
version = "0.1.0"
description = "Climbing the data science mountain"
authors = ["aleksanderskorupa <olek.skorupa@egmail.com>"]
packages = [
    { include = "src"}
]

[tool.black]
experimental-string-processing = true
line-length = 120

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
xgboost = "^2.0.3"
shap = "^0.44.0"

[tool.poetry.group.app.dependencies]
streamlit = "^1.30.0"


[tool.poetry.group.dev.dependencies]
black = "*"
blacken-docs =  "*"
dvc = "*"
dvc-gdrive = "^3.0.1"
flake8 = "*"
hydra-colorlog = "*"
hydra-core = "*"
ipykernel = "*"
ipython = "*"
ipywidgets = "*"
isort =  "*"
jupyter-contrib-nbextensions = "*"
jupyterlab = "*"
jupyterlab-git = "*"
jupyterlab-server = "*"
jupytext = "*"
line-profiler = "*"
matplotlib = "*"
mlflow = "*"
mlxtend = "*"
mypy = "*"
notebook = "*"
nptyping = "*"
omegaconf = "*"
pandas = "*"
plotly = "*"
pre-commit = "*"
pydocstyle = "*"
pylint =  "*"
pyodbc = "^5.0.1"
pytest = "^7.4.4"
scikit-learn = "*"
scipy = "*"
seaborn = "*"
setuptools = "*"
statsmodels = "*"
tqdm = "*"
types-PyYAML = "*"
wget = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
