[tool.poetry]
name = "climb-harder"
version = "0.1.0"
description = "Climbing the data science mountain"
authors = ["aleksanderskorupa <olek.skorupa@egmail.com>"]
packages = [
    { include = "src"}
]

[tool.black]
experimental-string-processing = true
line-length = 120

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
scikit-learn = "*"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.6"

[tool.poetry.group.app.dependencies]
streamlit = "^1.30.0"
plotly = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
blacken-docs =  "*"
dvc = "*"
dvc-gdrive = "^3.0.1"
flake8 = "*"
hydra-colorlog = "*"
hydra-core = "*"
ipykernel = "*"
ipython = "*"
ipywidgets = "*"
isort =  "*"
jupyter-contrib-nbextensions = "*"
jupyterlab = "*"
jupyterlab-git = "*"
jupyterlab-server = "*"
jupytext = "*"
line-profiler = "*"
matplotlib = "*"
mlflow = "*"
mlxtend = "*"
mypy = "*"
notebook = "*"
nptyping = "*"
omegaconf = "*"
pandas = "*"
pre-commit = "*"
pydocstyle = "*"
pylint =  "*"
pyodbc = "^5.0.1"
pytest = "^7.4.4"
scipy = "*"
seaborn = "*"
setuptools = "*"
statsmodels = "*"
tqdm = "*"
types-PyYAML = "*"
wget = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
